feat(payment): order status validator to pay. Tests.